--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto PF</title>
+    <link rel="stylesheet" href="./assets/css/style_main.css">
 </head>
 <body>
-    <h1>teste</h1>
+    <header>
+        <div class="social-header">
+            <a href=""><img src="assets/img/iconmonstr-facebook-6-240.png" alt="Facebook"></a>
+            <a href=""><img src="assets/img/iconmonstr-instagram-11-240.png" alt="Instagram"></a>
+        </div>
+        <div class="contact-header">
+            <img src="assets/img/iconmonstr-phone-6-240.png" alt="Telefone">
+            <p>(71) 9 9999-9999</p>
+            <img src="assets/img/iconmonstr-mail-thin-240.png" alt="Email">
+            <p>martahildesouza@gmail.com</p>
+        </div>
+    </header>
+    <nav>
+        <img src="" alt="Logo" class="logo">
+        <div class="secoes">
+            <a href="index.html">Início</a>
+            <a href="homes.html">Casas</a>
+            <a href="contact.html">Fale Conosco</a>
+        </div>
+    </nav>
+    <section class="main">
+        <p class="nome-empresa">Nome da Empresa</p>
+        <img src="" alt="Slogan da Empresa">
+    </section>
+    <section class="imagens">
+        <div class="caixa-imagens">
+            <p class="titulo">Venha curtir suas férias aqui</p>
+            <p class="subtitulo">Confira casas para aluguel</p>
+            <div class="carrossel">
+                <img src="assets/img/seta-esquerda.png" alt="" class="seta-esquerda" id="seta-esquerda">
+                <div class="container" id="img">
+                    <img src="assets/img/carrossel1.png" alt="">
+                </div>
+                <img src="assets/img/seta-direita.png" alt="" class="seta-direita" id="seta-direita">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
