alerações main page

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </div>
         </header>
         <nav>
-            <img src="" alt="Logo" class="logo">
+            <img src="./assets/img/logo-praxis.png" alt="Logo" class="logo">
             <div class="secoes">
                 <a href="index.html">Início</a>
                 <a href="homes.html">Casas</a>
-                <a href="contact.html">Fale Conosco</a>
+                <a href="contact.html" class="fale-conosco">Fale Conosco</a>
             </div>
         </nav>
         <section class="main">
@@ -45,6 +45,26 @@
                 </div>
             </div>
         </section>
+        <section class="contact">
+            <div class="texto"><p class="text-contact">Não perca seu tempo e alugue uma casa de praia.</p></div>
+            <div class="infos">
+                <p>(71) 9 9999-9999</p>
+                <p>martahildesouza@gmail.com</p>
+            </div>
+            <div class="botao"><a href="./contact.html"><button class="botao-fale-conosco">Fale conosco</button></a></div>
+        </section>
+        <footer>
+            <div class="social-footer">
+                <p class="text-social">Social</p>
+                <p>Facebook</p>
+                <p>Instagram</p>
+            </div>
+            <div class="contato-footer">
+                <p class="text-contact-footer">Contato</p>
+                <p>martahildesouza@gmail.com</p>
+            </div>
+            <img src="./assets/img/logo-praxis.png" alt="Logo">
+        </footer>
     </main>
 </body>
 </html>
