Adição do Carrosel
Fotos do site hollow knight apenas para a funcionalidade

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 <div class="carrossel">
                     <img src="./assets/img/seta-esquerda.png" alt="" class="seta-esquerda" id="seta-esquerda">
                     <div class="container" id="img">
-                        <img src="./assets/img/carrossel1.png" alt="">
+                        <img src="./assets/img/carrossel1.png" alt="Imagem 1 Carrosel" class="imagemAtiva">
+                        <img src="./assets/img/img1.png" alt="Imagem 2 Carrosel" >
+                        <img src="./assets/img/img2.png" alt="Imagem 3 Carrosel">
+                        <img src="./assets/img/img3.png" alt="Imagem 4 Carrosel">
                     </div>
                     <img src="./assets/img/seta-direita.png" alt="" class="seta-direita" id="seta-direita">
                 </div>
@@ -66,5 +69,6 @@
             <img src="./assets/img/logo-praxis.png" alt="Logo">
         </footer>
     </main>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
