--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto PF</title>
+    <title>Início</title>
     <link rel="stylesheet" href="./assets/css/style_main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <header>
             <div class="social-header">
-                <a href=""><img src="assets/img/iconmonstr-facebook-6-240.png" alt="Facebook"></a>
-                <a href=""><img src="assets/img/iconmonstr-instagram-11-240.png" alt="Instagram"></a>
+                <a href=""><img src="assets/img/facebook-branco.png" alt="Facebook"></a>
+                <a href=""><img src="assets/img/instagram-branco.png" alt="Instagram"></a>
             </div>
             <div class="contact-header">
-                <img src="assets/img/iconmonstr-phone-6-240.png" alt="Telefone">
+                <img src="assets/img/telefone.png" alt="Telefone">
                 <p>(71) 9 9999-9999</p>
-                <img src="assets/img/iconmonstr-mail-thin-240.png" alt="Email">
+                <img src="assets/img/email.png" alt="Email">
                 <p>martahildesouza@gmail.com</p>
             </div>
         </header>
@@ -65,6 +66,7 @@
             <div class="contato-footer">
                 <p class="text-contact-footer">Contato</p>
                 <p>martahildesouza@gmail.com</p>
+                <p>(71) 9 9999-9999</p>
             </div>
             <img src="./assets/img/logo-praxis.png" alt="Logo">
         </footer>
