alteração do footer e mudança de medidas de px para vh

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
     <link rel="stylesheet" href="./assets/css/style_main.css">
+    <link rel="stylesheet" href="./assets/css/resposividade_main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -58,15 +59,25 @@
             <div class="botao"><a href="./contact.html"><button class="botao-fale-conosco">Fale conosco</button></a></div>
         </section>
         <footer>
-            <div class="social-footer">
-                <p class="text-social">Social</p>
-                <p>Facebook</p>
-                <p>Instagram</p>
-            </div>
-            <div class="contato-footer">
-                <p class="text-contact-footer">Contato</p>
-                <p>martahildesouza@gmail.com</p>
-                <p>(71) 9 9999-9999</p>
+            <div class="informacoes-footer">
+                <div class="empresa-footer">
+                    <p class="text-empresa">Nome da empresa</p>
+                     <p>Marta Souza</p>
+                </div>
+                <div class="endereco-footer">
+                    <p class="text-endereco">Barra Grande, Maraú, BA</p>
+                    <p>Endereço da loja</p>
+                </div>
+                <div class="social-footer">
+                    <p class="text-social">Social</p>
+                    <p>Facebook</p>
+                    <p>Instagram</p>
+                </div>
+                <div class="contato-footer">
+                    <p class="text-contato-footer">Contato</p>
+                    <p>martahildesouza@gmail.com</p>
+                    <p>(71) 9 9999-9999</p>
+                </div>
             </div>
             <img src="./assets/img/logo-praxis.png" alt="Logo">
         </footer>
