--- a/homes.html
+++ b/homes.html
@@ -9,25 +9,15 @@
 </head>
 <body>
     <header>
-        <div class="social-header">
-            <a href=""><img src="assets/img/facebook-branco.png" alt="Facebook"></a>
-            <a href=""><img src="assets/img/instagram-branco.png" alt="Instagram"></a>
-        </div>
-        <div class="contact-header">
-            <img src="assets/img/telefone.png" alt="Telefone">
-            <p>(71) 9 9999-9999</p>
-            <img src="assets/img/email.png" alt="Email">
-            <p>martahildesouza@gmail.com</p>
-        </div>
+        <nav>
+            <img src="./assets/img/logo-praxis-cinza.png" alt="Logo" class="logo">
+            <div class="secoes">
+                <a href="index.html">Início</a>
+                <a href="homes.html">Casas</a>
+                <a href="contact.html" class="fale-conosco">Fale Conosco</a>
+            </div>
+        </nav>
     </header>
-    <nav>
-        <img src="./assets/img/logo-praxis-cinza.png" alt="Logo" class="logo">
-        <div class="secoes">
-            <a href="index.html">Início</a>
-            <a href="homes.html">Casas</a>
-            <a href="contact.html" class="fale-conosco">Fale Conosco</a>
-        </div>
-    </nav>
     <section class="fotos">
         <img src="./assets/img/seta-esquerda.png" alt="Seta esquerda" class="seta-esquerda" id="seta-esquerda">
         <img src="./assets/img/cama-homes.png" alt="Quarto da casa" class="cama-homes">
@@ -56,15 +46,25 @@
         </div>
     </section>
     <footer>
-        <div class="social-footer">
-            <p class="text-social">Social</p>
-            <p>Facebook</p>
-            <p>Instagram</p>
-        </div>
-        <div class="contato-footer">
-            <p class="text-contact-footer">Contato</p>
-            <p>martahildesouza@gmail.com</p>
-            <p>(71) 9 9999-9999</p>
+        <div class="informacoes-footer">
+            <div class="empresa-footer">
+                <p class="text-empresa">Nome da empresa</p>
+                 <p>Marta Souza</p>
+            </div>
+            <div class="endereco-footer">
+                <p class="text-endereco">Barra Grande, Maraú, BA</p>
+                <p>Endereço da loja</p>
+            </div>
+            <div class="social-footer">
+                <p class="text-social">Social</p>
+                <p>Facebook</p>
+                <p>Instagram</p>
+            </div>
+            <div class="contato-footer">
+                <p class="text-contato-footer">Contato</p>
+                <p>martahildesouza@gmail.com</p>
+                <p>(71) 9 9999-9999</p>
+            </div>
         </div>
         <img src="./assets/img/logo-praxis.png" alt="Logo">
     </footer>
