--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             </div>
             <div class="telefone-email">
                 <div class="telefone">
-                    <img src="assets/img/telefone.png" alt="Telefone">
+                    <img src="./assets/img/telefone.png" alt="Telefone">
                     <p>(71) 9 9999-9999</p>
                 </div>
                 <div class="email">
