--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <main>
         <header>
             <div class="social-header">
-                <a href=""><img src="assets/img/facebook-branco.png" alt="Facebook"></a>
-                <a href=""><img src="assets/img/instagram-branco.png" alt="Instagram"></a>
+                <a href=""><img src="./assets/img/facebook-branco.png" alt="Facebook"></a>
+                <a href=""><img src="./assets/img/instagram-branco.png" alt="Instagram"></a>
             </div>
             <div class="contact-header">
-                <img src="assets/img/telefone.png" alt="Telefone">
+                <img src="./assets/img/telefone.png" alt="Telefone">
                 <p>(71) 9 9999-9999</p>
-                <img src="assets/img/email.png" alt="Email">
+                <img src="./assets/img/email.png" alt="Email">
                 <p>martahildesouza@gmail.com</p>
             </div>
         </header>
