--- a/homes.html
+++ b/homes.html
@@ -20,7 +20,10 @@
     </header>
     <section class="fotos">
         <img src="./assets/img/seta-esquerda.png" alt="Seta esquerda" class="seta-esquerda" id="seta-esquerda">
-        <img src="./assets/img/cama-homes.png" alt="Quarto da casa" class="cama-homes">
+        <img src="./assets/img/cama-homes.png" alt="Quarto da casa" class="cama-homes" class="imagemAtiva">        
+        <img src="./assets/img/img1.png" alt="Quarto da casa" class="cama-homes">
+        <img src="./assets/img/img2.png" alt="Quarto da casa" class="cama-homes">
+        <img src="./assets/img/img3.png" alt="Quarto da casa" class="cama-homes">
         <img src="./assets/img/seta-direita.png" alt="Seta direita" class="seta-direita" id="seta-direita">
     </section>
     <section class="info">
@@ -68,5 +71,6 @@
         </div>
         <img src="./assets/img/logo-praxis.png" alt="Logo">
     </footer>
+    <script src="./assets/js/homes.js"></script>
 </body>
 </html>
