--- a/homes.html
+++ b/homes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style_homes.css">
-    <link rel="stylesheet" href="./assets/css/resposividade_homes.css">
+    <link rel="stylesheet" href="./assets/css/responsividade_homes.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,9 +22,9 @@
     <section class="fotos">
         <img src="./assets/img/seta-esquerda.png" alt="Seta esquerda" class="seta-esquerda" id="seta-esquerda">
         <img src="./assets/img/cama-homes.png" alt="Quarto da casa" class="cama-homes" class="imagemAtiva">        
-        <img src="./assets/img/img1.png" alt="Quarto da casa" class="cama-homes">
-        <img src="./assets/img/img2.png" alt="Quarto da casa" class="cama-homes">
-        <img src="./assets/img/img3.png" alt="Quarto da casa" class="cama-homes">
+        <img src="./assets/img/carrosselhomes2.png" alt="Banheiro da casa" class="cama-homes">
+        <img src="./assets/img/carrosselhomes3.png" alt="Sala da casa" class="cama-homes">
+        <img src="./assets/img/carrosselhomes4.jpeg" alt="piscina da casa" class="cama-homes">
         <img src="./assets/img/seta-direita.png" alt="Seta direita" class="seta-direita" id="seta-direita">
     </section>
     <section class="info">
