--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
     <link rel="stylesheet" href="./assets/css/style_main.css">
-    <link rel="stylesheet" href="./assets/css/resposividade_main.css">
-    <link rel="stylesheet" href="./assets/css/tablet_main.css">
+    <link rel="stylesheet" href="./assets/css/responsividade_main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -42,10 +41,9 @@
                 <div class="carrossel">
                     <img src="./assets/img/seta-esquerda.png" alt="" class="seta-esquerda" id="seta-esquerda">
                     <div class="container" id="img">
-                        <img src="./assets/img/carrossel1.png" alt="Imagem 1 Carrosel" class="imagemAtiva">
-                        <img src="./assets/img/img1.png" alt="Imagem 2 Carrosel" >
-                        <img src="./assets/img/img2.png" alt="Imagem 3 Carrosel">
-                        <img src="./assets/img/img3.png" alt="Imagem 4 Carrosel">
+                        <img src="./assets/img/carrosselmain1.jpg" alt="Imagem 1 Carrosel" class="imagemAtiva">
+                        <img src="./assets/img/carrosselmain2.jpg" alt="Imagem 2 Carrosel" >
+                        <img src="./assets/img/carrosselmain3.webp" alt="Imagem 3 Carrosel">
                     </div>
                     <img src="./assets/img/seta-direita.png" alt="" class="seta-direita" id="seta-direita">
                 </div>
@@ -57,7 +55,9 @@
                 <p>(71) 9 9999-9999</p>
                 <p>martahildesouza@gmail.com</p>
             </div>
-            <div class="botao"><a href="./contact.html"><button class="botao-fale-conosco">Fale conosco</button></a></div>
+            <div class="botao">
+                <a href="https://wa.me/5571999999999" target="_blank"><button class="botao-fale-conosco">Fale conosco</button></a>
+            </div>
         </section>
         <footer>
             <div class="informacoes-footer">
