--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="./assets/img/telefone.png" alt="Telefone">
                 <p>(71) 9 9999-9999</p>
                 <img src="./assets/img/email.png" alt="Email">
-                <p>martahildesouza@gmail.com</p>
+                <p>xxxxxxxxxxx@gmail.com</p>
             </div>
         </header>
         <nav>
@@ -31,8 +31,8 @@
             </div>
         </nav>
         <section class="main">
-            <p class="nome-empresa">Nome da Empresa</p>
-            <img src="" alt="Slogan da Empresa">
+            <p class="nome-empresa"></p>
+            <img src="./assets/img/logo-praxis.png" alt="Slogan da Empresa">
         </section>
         <section class="imagens">
             <div class="caixa-imagens">
@@ -53,7 +53,7 @@
             <div class="texto"><p class="text-contact">Não perca seu tempo e alugue uma casa de praia.</p></div>
             <div class="infos">
                 <p>(71) 9 9999-9999</p>
-                <p>martahildesouza@gmail.com</p>
+                <p>xxxxxxxxxxx@gmail.com</p>
             </div>
             <div class="botao">
                 <a href="https://wa.me/5571999999999" target="_blank"><button class="botao-fale-conosco">Fale conosco</button></a>
@@ -63,7 +63,7 @@
             <div class="informacoes-footer">
                 <div class="empresa-footer">
                     <p class="text-empresa">Nome da empresa</p>
-                     <p>Marta Souza</p>
+                     <p>Praxis JR</p>
                 </div>
                 <div class="endereco-footer">
                     <p class="text-endereco">Barra Grande, Maraú, BA</p>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="contato-footer">
                     <p class="text-contato-footer">Contato</p>
-                    <p>martahildesouza@gmail.com</p>
+                    <p>xxxxxxxxxxx@gmail.com</p>
                     <p>(71) 9 9999-9999</p>
                 </div>
             </div>
