--- a/homes.html
+++ b/homes.html
@@ -53,7 +53,7 @@
         <div class="informacoes-footer">
             <div class="empresa-footer">
                 <p class="text-empresa">Nome da empresa</p>
-                 <p>Marta Souza</p>
+                 <p>Praxis JR</p>
             </div>
             <div class="endereco-footer">
                 <p class="text-endereco">Barra Grande, Maraú, BA</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="contato-footer">
                 <p class="text-contato-footer">Contato</p>
-                <p>martahildesouza@gmail.com</p>
+                <p>xxxxxxxxxxx@gmail.com</p>
                 <p>(71) 9 9999-9999</p>
             </div>
         </div>
